Codedeploy text changing test

--- a/app/views/email_validator/_search_form.html.erb
+++ b/app/views/email_validator/_search_form.html.erb
@@ -32,7 +32,7 @@
       <div class="form-group">
         <%= f.label :url, class: "small mb-1" %>
         <%= f.text_field :url, class: "form-control" %>
-        <small id="emailHelp" class="form-text text-muted">Write a valid url without url scheme(http, https)</small>
+        <small id="emailHelp" class="form-text text-muted">Write a valid url without url scheme and also write the same format as like(http, https)</small>
 
       </div>
     </div>
